--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <img src="img\logo-technomart.svg" width="109" height="19" alt="Техномарт">
       </a>
       <form action="https://echo.htmlacademy.ru" method="post">
-        <input type="search" placeholder="Поиск">                                 <!--НЕ ПРИВЯЗАН <label>-->
+        <label for="search"  class="visually-hidden">Поиск</label>
+        <input id="search" type="search" placeholder="Поиск">                                 <!--НЕ ПРИВЯЗАН <label>-->
       </form>
       <ul>
         <li><a href="#">Закладки: 0</a></li>
