--- a/index.html
+++ b/index.html
@@ -4,38 +4,45 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
+  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
-  <header>
-    <div>
-      <a style="padding: 10px; background-color: red">
-        <img src="img\logo-technomart.svg" width="109" height="19" alt="Техномарт">
-      </a>
-      <form action="https://echo.htmlacademy.ru" method="post">
-        <label for="search"  class="visually-hidden">Поиск</label>
-        <input id="search" type="search" placeholder="Поиск">                                 <!--НЕ ПРИВЯЗАН <label>-->
-      </form>
-      <ul>
-        <li><a href="#">Закладки: 0</a></li>
-        <li><a href="#">Корзина: 0</a></li>
-        <li><a href="#">Оформить заказ</a></li>
-      </ul>
+  <!--НАШ ХЕДЕР-->
+  <header class="header">
+    <div class="header-top">
+      <div class="container">
+        <a class="logo">
+          <img src="img\logo-technomart.svg" width="109" height="19" alt="Техномарт">
+        </a>
+        <form action="https://echo.htmlacademy.ru" method="post">
+          <label for="search" class="visually-hidden">Поиск</label>
+          <input id="search" type="search" placeholder="Поиск">
+        </form>
+        <ul>
+          <li><a href="#">Закладки: 0</a></li>
+          <li><a href="#">Корзина: 0</a></li>
+          <li><a href="#">Оформить заказ</a></li>
+        </ul>
+      </div>
     </div>
-    <div>
-      <p>
+    <div class="container">
+      <p class="description">
         Интернет-магазин строительных материалов и инструментов для ремонта
       </p>
-      <div>
+      <div class="header-address">
         <a href="tel:+78125550555">+7(812)555-05-55</a>
         <adress>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</adress>
       </div>
-      <div>
+      <div class="registration">
         <a href="#">Войти</a>
         <a href="#">Регистрация</a>
       </div>
     </div>
-    <nav>
+    <nav class="navigation container">
       <ul>
         <li><a>Главная</a></li>
         <li><a href="#">Компания</a></li>
@@ -47,165 +54,168 @@
       </ul>
     </nav>
   </header>
+  <!--НАШЕ ТЕЛО-->
   <main>
-    <section>
+    <section class="menu container">
       <h2 class="visually-hidden">Промо-блок</h2>
-      <div>
+      <div class="menu-left">
         <ul>
-          <li>
+          <li class="menu-item">
             <h3>Материалы</h3>
             <img src="#" alt="Новинка">
-            <img src="#" alt="Материалы">
             <a href="#">На любой вкус</a>
           </li>
-          <li>
+          <li class="menu-item">
             <h3>Инструмент</h3>
-            <img src="#" alt="Инструмент">
             <a href="#">На все случаи</a>
           </li>
         </ul>
         <div class="slider">
-          <div class="slide">
+          <div class="slide slide-1">
             <h3>Дрели</h3>
             <p>Соседям на радость!</p>
-            <img src="img\slider-drills.jpg" width="620" height="266" alt="Дрели">
-            <a href="catalog.html">Открыть каталог</a>
+            <!--<img src="img\slider-drills.jpg" width="620" height="266" alt="Дрели">-->
+            <a class="btn-red" href="catalog.html">Открыть каталог</a>
           </div>
-          <div class="slide">
+          <div class="slide slide-2">
             <h3>Перфораторы</h3>
             <p>Настоящие мужские игрушки</p>
-            <img src="img\slider-perfs.jpg" width="620" height="266" alt="Перфораторы">
-            <a href="catalog.html">Открыть каталог</a>
+            <!--<img src="img\slider-perfs.jpg" width="620" height="266" alt="Перфораторы">-->
+            <a class="btn-red" href="catalog.html">Открыть каталог</a>
           </div>
         </div>
-        <button type="button"><img src="img\icon-left.svg" alt="Назад"></button>
-        <button type="button"><img src="img\icon-right.svg" alt="Вперед"></button>
+        <button type="button"><!--<img src="img\icon-left.svg" alt="Назад">-->Назад</button>
+        <button type="button"><!--<img src="img\icon-right.svg" alt="Вперед">-->Вперед</button>
       </div>
-      <ul>
-        <li>
+      <ul class="menu-right">
+        <li class="menu-item">
           <h3>Техника</h3>
-          <img src="#" alt="Техника">
           <a href="#">Для стройки</a>
         </li>
-
-        <li>
+        <li class="menu-item">
           <h3>Скидки 50%</h3>
-          <img src="#" alt="Скидки">
           <a href="#">На 350 товаров</a>
         </li>
-        <li>
+        <li class="menu-item">
           <h3>Доставка</h3>
-          <img src="#" alt="Доставка">
           <a href="#">Бесплатно</a>
         </li>
       </ul>
     </section>
-    <section>
-      <div>
+    <!--СЕКЦИЯ ПОПУЛЯРНЫХ ТОВАРОВ-->
+    <section class="popular-items container">
+      <div class="popular">
         <h2>Популярные товары:</h2>
-        <a href="#">Все популярные товары</a>
+        <a class="btn-red" href="#">Все популярные товары</a>
       </div>
       <ul>
-        <li>
+        <li class="card-item">
           <h4><a href="#">Перфоратор BOSCH<br>BFG 9000</a></h4>
           <p>
             <img src="img\item-bfg9000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
           </p>
-          <p><del>32500 Р.</del></p>
-          <p>25500 Р.</p>
-          <p>
+          <p class="del">32500 Р.</p>
+          <p class="price">25500 Р.</p>
+          <p class="buy">
             <a href="">Купить</a>
             <a href="">В закладки</a>
           </p>
         </li>
-        <li>
+        <li class="card-item">
           <h4><a href="#">Перфоратор BOSCH<br>BFG 3000</a></h4>
           <p>
             <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
           </p>
-          <p><del>22500 Р.</del></p>
-          <p>15500 Р.</p>
-          <p>
+          <p class="del">22500 Р.</p>
+          <p class="price">15500 Р.</p>
+          <p class="buy">
             <a href="">Купить</a>
             <a href="">В закладки</a>
           </p>
         </li>
-        <li>
+        <li class="card-item">
           <h4><a href="#">Перфоратор BOSCH<br>BFG 6000</a></h4>
           <p>
             <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
           </p>
-          <p><del>30500 Р.</del></p>
-          <p>25500 Р.</p>
-          <p>
+          <p class="del">30500 Р.</p>
+          <p class="price">25500 Р.</p>
+          <p class="buy">
             <a href="">Купить</a>
             <a href="">В закладки</a>
           </p>
         </li>
-        <li>
+        <li class="card-item">
           <h4><a href="#">Перфоратор BOSCH<br>BFG 2000</a></h4>
           <img src="#" alt="Новинка">
           <p>
             <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
           </p>
-          <p>12500 Р.</p>
-          <p>
+          <p class="price">12500 Р.</p>
+          <p class="buy">
             <a href="">Купить</a>
             <a href="">В закладки</a>
           </p>
         </li>
       </ul>
     </section>
-    <section>
-      <div>
+    <!--СЕКЦИЯ ПОПУЛЯРНЫХ БРЕНДОВ-->
+    <section class="popular-brands container">
+      <div class="popular">
         <h2>Популярные производители:</h2>
-        <a href="#">Все производители</a>
+        <a class="btn-red" href="#">Все производители</a>
       </div>
       <ul>
-        <li><a href="#"><img src="img\bosch.png" width="126" height="37" alt="BOSCH"></a></li>
-        <li><a href="#"><img src="img\makita.png" width="123" height="40" alt="Makita"></a></li>
-        <li><a href="#"><img src="img\dewalt.png" width="146" height="44" alt="DeWALT"></a></li>
-        <li><a href="#"><img src="img\interskol.png" width="200" height="88" alt="Интерскол"></a></li>
-        <li><a href="#"><img src="img\hitachi.png" width="169" height="31" alt="Hitachi"></a></li>
-        <li><a href="#"><img src="img\lg.png" width="121" height="73" alt="LG"></a></li>
-        <li><a href="#"><img src="img\aeg.png" width="151" height="96" alt="AEG"></a></li>
-        <li><a href="#"><img src="img\metabo.png" width="204" height="69" alt="Metabo"></a></li>
+        <li class="brand-item"><a href="#"><img src="img\bosch.png" width="126" height="37" alt="BOSCH"></a></li>
+        <li class="brand-item"><a href="#"><img src="img\makita.png" width="123" height="40" alt="Makita"></a></li>
+        <li class="brand-item"><a href="#"><img src="img\dewalt.png" width="146" height="44" alt="DeWALT"></a></li>
+        <li class="brand-item"><a href="#"><img src="img\interskol.png" width="200" height="88" alt="Интерскол"></a>
+        </li>
+        <li class="brand-item"><a href="#"><img src="img\hitachi.png" width="169" height="31" alt="Hitachi"></a></li>
+        <li class="brand-item"><a href="#"><img src="img\lg.png" width="121" height="73" alt="LG"></a></li>
+        <li class="brand-item"><a href="#"><img src="img\aeg.png" width="151" height="96" alt="AEG"></a></li>
+        <li class="brand-item"><a href="#"><img src="img\metabo.png" width="204" height="69" alt="Metabo"></a></li>
       </ul>
     </section>
-    <section>
-      <div>
-        <h2>Сервисы</h2>
-        <p>Хороший интернет-магазин отличается от плохого не только ценами!
-          Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-      </div>
-      <div>
-        <ul>
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Гарантия</a></li>
-          <li><a href="#">Кредит</a></li>
-        </ul>
-        <div>
-          <h2>Доставка</h2>
-          <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!<br>
-            Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+    <!--СЕКЦИЯ СЕРВИСОВ-->
+    <section class="services">
+      <div class="container">
+        <div class="services-description">
+          <h2>Сервисы</h2>
+          <p>Хороший интернет-магазин отличается от плохого не только ценами!
+            Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
         </div>
-        <div>
-          <h2>Гарантия</h2>
-          <p>Если купленный у нас товар поломается или заискрит,
-            а также в случае пожара, спровоцированного его возгоранием, вы всегда можете быть уверены в нашей гарантии.
-            Мы обменяем сгоревший товар на новый.
-            Дом уж восстановите как-нибудь сами.</p>
+        <div class="services-info">
+          <ul>
+            <li class="services-btn"><a href="#">Доставка</a></li>
+            <li class="services-btn"><a href="#">Гарантия</a></li>
+            <li class="services-btn"><a href="#">Кредит</a></li>
+          </ul>
+          <div>
+            <h2>Доставка</h2>
+            <p class="delivery">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!<br>
+              Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+          </div>
+          <div>
+            <h2>Гарантия</h2>
+            <p class="guaranty">Если купленный у нас товар поломается или заискрит,
+              а также в случае пожара, спровоцированного его возгоранием, вы всегда можете быть уверены в нашей
+              гарантии.
+              Мы обменяем сгоревший товар на новый.
+              Дом уж восстановите как-нибудь сами.</p>
+          </div>
           <div>
             <h2>Кредит</h2>
-            <p>Залезть в долговую яму стало проще!
+            <p class="credit">Залезть в долговую яму стало проще!
               Кредитные консультанты придут вам на помощь.</p>
-            <a href="">Отправить заявку</a>
+            <a class="btn-red" href="">Отправить заявку</a>
           </div>
         </div>
       </div>
     </section>
-    <div>
-      <section>
+    <!--СЕКЦИЯ О КОМПАНИИ И КОНТАКТЫ-->
+    <div class="container">
+      <section class="info">
         <h3>Компания "Техномарт"</h3>
         <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и
           строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
@@ -216,24 +226,25 @@
           <li>Автотрейдинг</li>
           <li>ЖелДорЭкспедиция</li>
         </ul>
-        <a href="#">Подробнее о компании</a>
+        <a class="btn-red" href="#">Подробнее о компании</a>
       </section>
-      <section>
+      <section class="contacts">
         <h3>Контакты</h3>
         <p>Вы можете забрать товар сами,<br>
           заехав в наш офис:</p>
         <a href="#"><img src="img\map.jpg" width="300" height="158" alt="Карта"></a>
-        <a href="">Заблудились? Напишите нам!</a>
+        <a class="btn-red" href="">Заблудились? Напишите нам!</a>
       </section>
     </div>
   </main>
-  <footer>
-    <div>
-      <div>
-        <a style="padding: 10px; background-color: red">
+  <!--НАШ ФУТЕР-->
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-top">
+        <a class="logo">
           <img src="img\logo-technomart.svg" width="109" height="19" alt="Техномарт">
         </a>
-        <ul>
+        <ul class="footer-top-nav">
           <li><a href=" #">Компания</a></li>
           <li><a href="#">Новости</a></li>
           <li><a href="catalog.html">Каталог</a></li>
@@ -241,12 +252,12 @@
           <li><a href="#">Контакты</a></li>
         </ul>
       </div>
-      <div>
+      <div class="footer-center">
         <p>
           <adress>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</adress>
           <a href="tel:+78125550555">+7(812)555-05-55</a>
         </p>
-        <ul>
+        <ul class="footer-center-nav">
           <li><a href="#">Материалы</a></li>
           <li><a href="#">Техника</a></li>
           <li><a href="#">Инструмент</a></li>
@@ -254,23 +265,26 @@
         </ul>
       </div>
     </div>
-    <div>
-      <p>2010-2017 Компания "Техномарт"<span>Все права защищены</span></p>
-      <ul>
-        <li><a href="#"><span class="visually-hidden">Вконтакте</span></a></li>
-        <li><a href="#"><span class="visually-hidden">Фейсбук</span></a></li>
-        <li><a href="#"><span class="visually-hidden">Инстаграм</span></a></li>
-      </ul>
-      <p>
-        Обратная связь:
-        <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-      </p>
-      <p>Разработано -
-        <a href="#">htmlacademy.ru</a>
-      </p>
+    <div class="footer-bottom">
+      <div class="container">
+        <p>2010-2017 Компания "Техномарт"<span> Все права защищены</span></p>
+        <ul class="social">
+          <li><a class="vkontakte" href="#"><span class="visually-hidden">Вконтакте</span></a></li>
+          <li><a class="facebook" href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+          <li><a class="instagram" href="#"><span class="visually-hidden">Инстаграм</span></a></li>
+        </ul>
+        <p>
+          Обратная связь:
+          <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+        </p>
+        <p>Разработано -
+          <a href="#">htmlacademy.ru</a>
+        </p>
+      </div>
     </div>
   </footer>
-  <section>
+  <!--ПОПАП С ОБРАТНОЙ СВЯЗЬЮ-->
+  <section class="feedback">
     <h2 class="visually-hidden">Обратная связь</h2>
     <p>Введите свой логин и пароль.</p>
     <form action="https://echo.htmlacademy.ru" method="post">
@@ -286,11 +300,12 @@
         <label for="textform">Текст письма:</label>
         <textarea id="textform" type="comment" name="letter" placeholder="В свободной форме"></textarea>
       </div>
-      <button type="submit">Отправить</button>
+      <button class="btn-red" type="submit">Отправить</button>
     </form>
     <button type="button">Закрыть</button>
   </section>
-  <section>
+  <!--ПОПАП С КАРТОЙ-->
+  <section class="map">
     <h2 class="visually-hidden">Как до нас добраться</h2>
     <img src="img\map-full.jpg" width="940" height="446" alt="Большая карта">
     <button type="button">Закрыть</button>
