--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="header">
     <div class="header-top">
       <div class="container">
-        <a class="logo">
+        <a class="logo-main">
           <img src="img\logo-technomart.svg" width="109" height="19" alt="Техномарт">
         </a>
         <form action="https://echo.htmlacademy.ru" method="post">
@@ -23,9 +23,9 @@
           <input id="search" type="search" placeholder="Поиск">
         </form>
         <ul>
-          <li><a href="#">Закладки: 0</a></li>
-          <li><a href="#">Корзина: 0</a></li>
-          <li><a href="#">Оформить заказ</a></li>
+          <li class="top-links"><a href="#">Закладки: 0</a></li>
+          <li class="top-links"><a href="#">Корзина: 0</a></li>
+          <li class="top-links checkout"><a href="#">Оформить заказ</a></li>
         </ul>
       </div>
     </div>
@@ -44,13 +44,13 @@
     </div>
     <nav class="navigation container">
       <ul>
-        <li><a>Главная</a></li>
-        <li><a href="#">Компания</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
-        <li><a href="#">Новости</a></li>
-        <li><a href="#">Спецпредложения</a></li>
-        <li><a href="#">Доставка</a></li>
-        <li><a href="#">Контакты</a></li>
+        <li class="paged nav-item"><a>Главная</a></li>
+        <li class="nav-item"><a href="#">Компания</a></li>
+        <li class="nav-item"><a href="catalog.html">Каталог</a></li>
+        <li class="nav-item"><a href="#">Новости</a></li>
+        <li class="nav-item"><a href="#">Спецпредложения</a></li>
+        <li class="nav-item"><a href="#">Доставка</a></li>
+        <li class="nav-item"><a href="#">Контакты</a></li>
       </ul>
     </nav>
   </header>
@@ -84,8 +84,8 @@
             <a class="btn-red" href="catalog.html">Открыть каталог</a>
           </div>
         </div>
-        <button type="button"><!--<img src="img\icon-left.svg" alt="Назад">-->Назад</button>
-        <button type="button"><!--<img src="img\icon-right.svg" alt="Вперед">-->Вперед</button>
+        <button class="btn-left" type="button"><!--<img src="img\icon-left.svg" alt="Назад">--></button>
+        <button type="btn-right"><!--<img src="img\icon-right.svg" alt="Вперед">-->Вперед</button>
       </div>
       <ul class="menu-right">
         <li class="menu-item">
@@ -117,8 +117,8 @@
           <p class="del">32500 Р.</p>
           <p class="price">25500 Р.</p>
           <p class="buy">
-            <a href="">Купить</a>
-            <a href="">В закладки</a>
+            <a class="buy-btn" href="">Купить</a>
+            <a class="bookmark-btn" href="">В закладки</a>
           </p>
         </li>
         <li class="card-item">
@@ -129,8 +129,8 @@
           <p class="del">22500 Р.</p>
           <p class="price">15500 Р.</p>
           <p class="buy">
-            <a href="">Купить</a>
-            <a href="">В закладки</a>
+            <a class="buy-btn" href="">Купить</a>
+            <a class="bookmark-btn" href="">В закладки</a>
           </p>
         </li>
         <li class="card-item">
@@ -141,8 +141,8 @@
           <p class="del">30500 Р.</p>
           <p class="price">25500 Р.</p>
           <p class="buy">
-            <a href="">Купить</a>
-            <a href="">В закладки</a>
+            <a class="buy-btn" href="">Купить</a>
+            <a class="bookmark-btn" href="">В закладки</a>
           </p>
         </li>
         <li class="card-item">
@@ -153,8 +153,8 @@
           </p>
           <p class="price">12500 Р.</p>
           <p class="buy">
-            <a href="">Купить</a>
-            <a href="">В закладки</a>
+            <a class="buy-btn" href="">Купить</a>
+            <a class="bookmark-btn" href="">В закладки</a>
           </p>
         </li>
       </ul>
@@ -181,8 +181,8 @@
     <section class="services">
       <div class="container">
         <div class="services-description">
-          <h2>Сервисы</h2>
-          <p>Хороший интернет-магазин отличается от плохого не только ценами!
+          <h2 class="text-h2">Сервисы</h2>
+          <p class="text-info">Хороший интернет-магазин отличается от плохого не только ценами!
             Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
         </div>
         <div class="services-info">
@@ -192,21 +192,21 @@
             <li class="services-btn"><a href="#">Кредит</a></li>
           </ul>
           <div>
-            <h2>Доставка</h2>
-            <p class="delivery">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!<br>
+            <h3>Доставка</h3>
+            <p class="delivery text-info">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!<br>
               Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
           </div>
           <div>
-            <h2>Гарантия</h2>
-            <p class="guaranty">Если купленный у нас товар поломается или заискрит,
+            <h3>Гарантия</h3>
+            <p class="guaranty text-info">Если купленный у нас товар поломается или заискрит,
               а также в случае пожара, спровоцированного его возгоранием, вы всегда можете быть уверены в нашей
               гарантии.
               Мы обменяем сгоревший товар на новый.
               Дом уж восстановите как-нибудь сами.</p>
           </div>
           <div>
-            <h2>Кредит</h2>
-            <p class="credit">Залезть в долговую яму стало проще!
+            <h3>Кредит</h3>
+            <p class="credit text-info">Залезть в долговую яму стало проще!
               Кредитные консультанты придут вам на помощь.</p>
             <a class="btn-red" href="">Отправить заявку</a>
           </div>
@@ -216,10 +216,10 @@
     <!--СЕКЦИЯ О КОМПАНИИ И КОНТАКТЫ-->
     <div class="container">
       <section class="info">
-        <h3>Компания "Техномарт"</h3>
-        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и
+        <h2 class="text-h2">Компания "Техномарт"</h2>
+        <p class="text-info">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и
           строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-        <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+        <p class="text-info">Мы можем доставить ваш товар в самые отдаленные точки России!<br>
           Техномарт работает со многими транспортными компаниями:</p>
         <ul>
           <li>Деловые линии</li>
@@ -229,8 +229,8 @@
         <a class="btn-red" href="#">Подробнее о компании</a>
       </section>
       <section class="contacts">
-        <h3>Контакты</h3>
-        <p>Вы можете забрать товар сами,<br>
+        <h2 class="text-h2">Контакты</h2>
+        <p class="text-info">Вы можете забрать товар сами,<br>
           заехав в наш офис:</p>
         <a href="#"><img src="img\map.jpg" width="300" height="158" alt="Карта"></a>
         <a class="btn-red" href="">Заблудились? Напишите нам!</a>
@@ -241,7 +241,7 @@
   <footer class="footer">
     <div class="container">
       <div class="footer-top">
-        <a class="logo">
+        <a class="logo-main">
           <img src="img\logo-technomart.svg" width="109" height="19" alt="Техномарт">
         </a>
         <ul class="footer-top-nav">
@@ -273,11 +273,11 @@
           <li><a class="facebook" href="#"><span class="visually-hidden">Фейсбук</span></a></li>
           <li><a class="instagram" href="#"><span class="visually-hidden">Инстаграм</span></a></li>
         </ul>
-        <p>
+        <p  class="mailto">
           Обратная связь:
           <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
         </p>
-        <p>Разработано -
+        <p class="htmlacademy">Разработано -
           <a href="#">htmlacademy.ru</a>
         </p>
       </div>
@@ -287,7 +287,7 @@
   <section class="feedback">
     <h2 class="visually-hidden">Обратная связь</h2>
     <p>Введите свой логин и пароль.</p>
-    <form action="https://echo.htmlacademy.ru" method="post">
+    <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
       <div>
         <label for="name">Ваше имя:</label>
         <input id="name" type="text" name="name" placeholder="Имя Фамилия">
