--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </form>
         <ul>
           <li class="top-links"><a href="#">Закладки: 0</a></li>
-          <li class="top-links"><a href="#">Корзина: 0</a></li>
+          <li class="top-links basket"><a href="#">Корзина: 0</a></li>
           <li class="top-links checkout"><a href="#">Оформить заказ</a></li>
         </ul>
       </div>
