--- a/catalog.html
+++ b/catalog.html
@@ -67,7 +67,7 @@
       <h1>Перфораторы</h1>
     </div>
     <ul class="breadcrumbs">
-      <li><a href="index.html">Главная</a></li>
+      <li><a class="breadcrumbs-main" href="index.html"><span>Главная</span></a></li>
       <li><a href="#">Каталлог</a></li>
       <li><a href="#">Инструмент</a></li>
       <li class="breadcrumbs-active">Перфораторы</li>
@@ -138,7 +138,7 @@
       </div>
       <ul>
         <li class="card-item">
-          <h4><a href="#">Перфоратор BOSCH<br>BFG 3000</a></h4>
+          <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 3000</a></h4>
           <p>
             <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
           </p>
@@ -150,7 +150,7 @@
           </p>
         </li>
         <li class="card-item">
-          <h4><a href="#">Перфоратор BOSCH<br>BFG 6000</a></h4>
+          <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 6000</a></h4>
           <p>
             <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
           </p>
@@ -162,7 +162,7 @@
           </p>
         </li>
         <li class="card-item">
-          <h4><a href="#">Перфоратор BOSCH<br>BFG 2000</a></h4>
+          <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 2000</a></h4>
           <img src="#" alt="Новинка">
           <p>
             <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
@@ -175,7 +175,7 @@
           </p>
         </li>
         <li class="card-item">
-          <h4><a href="#">Перфоратор BOSCH<br>BFG 3000</a></h4>
+          <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 3000</a></h4>
           <p>
             <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
           </p>
@@ -187,7 +187,7 @@
           </p>
         </li>
         <li class="card-item">
-          <h4><a href="#">Перфоратор BOSCH<br>BFG 6000</a></h4>
+          <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 6000</a></h4>
           <img src="#" alt="Новинка">
           <p>
             <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
@@ -200,7 +200,7 @@
           </p>
         </li>
         <li class="card-item">
-          <h4><a href="#">Перфоратор BOSCH<br>BFG 2000</a></h4>
+          <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 2000</a></h4>
           <p>
             <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
           </p>
@@ -212,7 +212,7 @@
           </p>
         </li>
         <li class="card-item">
-          <h4><a href="#">Перфоратор BOSCH<br>BFG 3000</a></h4>
+          <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 3000</a></h4>
           <p>
             <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
           </p>
@@ -224,7 +224,7 @@
           </p>
         </li>
         <li class="card-item">
-          <h4><a href="#">Перфоратор BOSCH<br>BFG 6000</a></h4>
+          <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 6000</a></h4>
           <p>
             <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
           </p>
@@ -236,7 +236,7 @@
           </p>
         </li>
         <li class="card-item">
-          <h4><a href="#">Перфоратор BOSCH<br>BFG 2000</a></h4>
+          <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 2000</a></h4>
           <p>
             <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
           </p>
