--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       </div>
       <ul>
         <li class="card-item">
-          <h4><a href="#">Перфоратор BOSCH<br>BFG 9000</a></h4>
+          <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 9000</a></h4>
           <p>
             <img src="img\item-bfg9000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
           </p>
@@ -122,7 +122,7 @@
           </p>
         </li>
         <li class="card-item">
-          <h4><a href="#">Перфоратор BOSCH<br>BFG 3000</a></h4>
+          <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 3000</a></h4>
           <p>
             <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
           </p>
@@ -134,7 +134,7 @@
           </p>
         </li>
         <li class="card-item">
-          <h4><a href="#">Перфоратор BOSCH<br>BFG 6000</a></h4>
+          <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 6000</a></h4>
           <p>
             <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
           </p>
@@ -146,7 +146,7 @@
           </p>
         </li>
         <li class="card-item">
-          <h4><a href="#">Перфоратор BOSCH<br>BFG 2000</a></h4>
+          <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 2000</a></h4>
           <img src="#" alt="Новинка">
           <p>
             <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
