убрал <p> из <lable> и сделал <lable> блочными

--- a/index.html
+++ b/index.html
@@ -295,22 +295,16 @@
     <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
       <div class="feedback-login">
         <div>
-          <label for="name">
-            <p>Ваше имя:</p>
-          </label>
+          <label for="name">Ваше имя:</label>
           <input id="name" type="text" name="name" placeholder="Имя Фамилия">
         </div>
         <div>
-          <label for="email">
-            <p>Ваш e-mail:</p>
-          </label>
+          <label for="email">Ваш e-mail:</label>
           <input id="email" type="email" name="email" placeholder="email@example.com">
         </div>
       </div>
       <div class="textarea">
-        <label for="textform">
-          <p>Текст письма:</p>
-        </label>
+        <label for="textform">Текст письма:</label>
         <textarea id="textform" type="comment" name="letter" placeholder="В свободной форме"></textarea>
       </div>
       <button class="btn-red" type="submit">Отправить</button>
